--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" media="all">
 </head>
 <body>
+    <header>Etch-A-Sketch</header>
+    <main>
+        <div id="grid-container"></div>
+    </main>
     <script src="main.js"></script>    
 </body>
 </html>
