--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>Etch-A-Sketch</header>
     <main>
         <div id="grid-container"></div>
+        <button id="clear-grid">Clear</button>
     </main>
     <script src="main.js"></script>    
 </body>
