add other option btns in html and style them

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <header>Etch-A-Sketch</header>
     <main>
         <div id="grid-container"></div>
-        <button id="clear-grid">Clear</button>
+        <div id="options">
+            <button id="clear-grid" class="option-btn">Clear</button>
+            <button id="clear-grid" class="option-btn">Random Colors</button>
+            <button id="clear-grid" class="option-btn">10% Black</button>
+        </div>
     </main>
     <script src="main.js"></script>    
 </body>
