fix ids of option buttons and add hsl generating function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="grid-container"></div>
         <div id="options">
             <button id="clear-grid" class="option-btn">Clear</button>
-            <button id="clear-grid" class="option-btn">Random Colors</button>
-            <button id="clear-grid" class="option-btn">10% Black</button>
+            <button id="random-colors" class="option-btn">Random Colors</button>
+            <button id="ten-percent-black" class="option-btn">10% Black</button>
         </div>
     </main>
     <script src="main.js"></script>    
