add erase btn and adjust option btn styling

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button id="clear-grid" class="option-btn">Clear</button>
             <button id="random-colors" class="option-btn">Random Colors</button>
             <button id="ten-percent-black" class="option-btn">10% Black</button>
+            <button id="erase" class="option-btn">Erase</button>
         </div>
     </main>
     <script src="main.js"></script>    
